Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-with-liveness-check
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
