Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-sample
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: levi.local.com
      http:
        paths:
        - path: / 
          backend:
            serviceName: springboot-web-service 
            servicePort: 80
